--- a/AdventOfCode.Solutions/AdventOfCode.Solutions.csproj
+++ b/AdventOfCode.Solutions/AdventOfCode.Solutions.csproj
@@ -7,12 +7,13 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <None Update="Days\Day*\*.txt">
+      <None Update="Inputs\*.txt">
         <CopyToOutputDirectory>Always</CopyToOutputDirectory>
       </None>
-      <None Update="Days\Day01\day01-2.txt">
-        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
-      </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Inputs\" />
     </ItemGroup>
 
 </Project>
