Added performance benchamarks

--- a/AdventOfCode.Solutions/AdventOfCode.Solutions.csproj
+++ b/AdventOfCode.Solutions/AdventOfCode.Solutions.csproj
@@ -16,4 +16,8 @@
       <Folder Include="Inputs\" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="BenchmarkDotNet" Version="0.14.0" />
+    </ItemGroup>
+
 </Project>
